--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node ./index.ts"
+    "start": "npx ts-node ./src/index.ts",
+    "graphql-debugger": "npx graphql-debugger"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "@graphql-debugger/trace-schema": "^0.0.0-alpha.100",
     "@graphql-tools/schema": "^10.0.3",
     "graphql": "^16.8.1",
+    "graphql-debugger": "^0.0.0-alpha.100",
     "graphql-yoga": "^5.3.0",
     "typescript": "^5.4.5"
   }
