--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@graphql-debugger/adapter-proxy": "^0.0.0-alpha.100",
-    "@graphql-debugger/trace-schema": "^0.0.0-alpha.100",
+    "@graphql-debugger/adapter-proxy": "^0.0.0-alpha.102",
+    "@graphql-debugger/trace-schema": "^0.0.0-alpha.102",
     "@graphql-tools/schema": "^10.0.3",
+    "@prisma/client": "^5.13.0",
     "graphql": "^16.8.1",
-    "graphql-debugger": "^0.0.0-alpha.100",
+    "graphql-debugger": "^0.0.0-alpha.102",
     "graphql-yoga": "^5.3.0",
+    "prisma": "^5.13.0",
     "typescript": "^5.4.5"
   }
 }
